force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/XFILES__Xfile_Manage_Folder_Hierarchy__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manage the folder hierarchy for the providers</description>
    <label>Xfile Manage Folder Hierarchy</label>
</CustomObject>