force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Folder_Id__c</fullName>
    <description>Folder Id</description>
    <label>Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>