force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Folder_Reference_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Folder_Reference_Field_API_Name__c</fullName>
    <description>Folder Reference Field API Name</description>
    <inlineHelpText>Folder Reference Field API Name</inlineHelpText>
    <label>Folder Reference Field API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>