force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Folder_Structure__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Folder_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folder Structure</label>
    <type>Checkbox</type>
</CustomField>