force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>