force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Profile_Names__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Profile_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>List of profile names to sort files in the list component.</description>
    <inlineHelpText>List of profile names to sort files in the list component.</inlineHelpText>
    <label>Profile Names</label>
    <type>Checkbox</type>
</CustomField>