force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>