force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provider_Name__c</fullName>
    <description>Cloud storage provider name depending upon provider type.</description>
    <inlineHelpText>Cloud storage provider name depending upon provider type.</inlineHelpText>
    <label>Provider Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>