force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Provider_Type__c</fullName>
    <description>Provider Type</description>
    <label>Provider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>