force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Record_Folder_Id_Field_API__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Record_Folder_Id_Field_API__c</fullName>
    <label>Record Folder Id Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>