force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/fields/XFILES__Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Template_Folder__c</fullName>
    <description>Template Folder</description>
    <label>Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>