force-app/main/default/objects/XFILES__Xfile_Manage_Folder_Hierarchy__c/listViews/XFILES__All_Items.listView-meta.xml
<ListView>
    <fullName>XFILES__All_Items</fullName>
    <columns>NAME</columns>
    <columns>XFILES__Provider_Name__c</columns>
    <columns>XFILES__Provider_Type__c</columns>
    <columns>XFILES__Template_Folder__c</columns>
    <columns>XFILES__Folder_Id__c</columns>
    <columns>XFILES__Folder_Reference_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
</ListView>